docs: expand comprehensive multi-language guides with practical examples
- Add extensive Rust guide covering nested models, lists, streaming XmlItemStream, and xsi:nil
- Add Python guide covering dataclasses, collections, Pydantic v2 validation, and xsdata migration
- Add Modern C++20 guide covering SchemaBuilder, RAII, std::optional, and struct mappings
- Add Go guide covering Cgo bridge, error handling, GC finalizers, and HTTP service patterns
- Add TypeScript/Node.js guide covering ModelSchema, Buffer parsing, and Express pipelines
- Add Java 22 guide covering Project Panama FFI, Arena off-heap memory, and downcalls
- Link dedicated language guides directly in README.md quickstarts